// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal render 1`] = `
<Modal
  autoFocus={false}
  backdrop={true}
  backdropClassName="modal-background"
  className="modal"
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": false,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={false}
>
  child
</Modal>
`;

exports[`Modal render active 1`] = `
<Modal
  autoFocus={false}
  backdrop={true}
  backdropClassName="modal-background"
  className="modal is-active"
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": false,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  child
</Modal>
`;
